更新redis,jvm等